syntax = "proto3";

package chatPackage;

service ChatService {
  rpc Chat (stream ChatRequest) returns (stream ChatResponse) {};
}

message ChatRequest {
  string message = 1;
}

message ChatResponse {
  string userName = 1;
  string message = 2;
}